Disable search tag pages, possible memory leak.

--- a/matcher/templates/navbar.html
+++ b/matcher/templates/navbar.html
@@ -24,7 +24,7 @@
       {% if g.user.is_authenticated %}
         {{ nav_item('changesets') }}
       {% endif %}
-      {{ nav_item('tag_list') }}
+      {# {{ nav_item('tag_list') }} #}
       {# {{ nav_item('saved_places') }} #}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
