Candidates page: adjust position of the map.

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -80,18 +80,17 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='leaflet/leaflet.css') }}">
 <style>
 #page-body {
-  width: 50%;
-  left: 0px;
+  width: 60%;
+  left: 40%;
   position: relative;
 }
 
 #map {
-  width: 50%;
+  width: 40%;
 
   top: 56px;
-  right: 0px;
   bottom: 0px;
-  left: auto;
+  left: 0px;
 
   display: block;
   position: fixed;
