Add place boundary to map on candidates page
Closes #240

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -109,7 +109,12 @@
 <script>
 var current_highlight;
 var current_marker;
+var geojson = {{ place.geojson | safe }};
 var map = L.map('map');
+var mapStyle = {fillOpacity: 0};
+var layer = L.geoJSON(geojson, {'style': mapStyle});
+layer.addTo(map);
+
 {% if not candidates %}
 var bounds = [[{{ place.north }}, {{place.west }}],
               [{{ place.south}}, {{ place.east}}]];
