--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -15,7 +15,7 @@
   {% set search_tags = c.item.tags %}
   {% set m = c.get_match() %}
     <li>{{c.osm_type}}:
-      <a href="{{ url_for('match_detail', item_id=c.item_id, osm_type=c.osm_type, osm_id=c.osm_id) }}">{{ c.label }}</a>
+      <a href="{{ url_for('match_detail', item_id=c.item_id, osm_type=c.osm_type, osm_id=c.osm_id) }}">{{ c.label_best_language(languages) }}</a>
       <a href="https://www.openstreetmap.org/{{ c.osm_type }}/{{ c.osm_id }}">(OSM)</a>
     {% if c.dist and c.dist > 1 %}
      {{ '{:,d}'.format(c.dist | int) }} m from Wikidata
