--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -45,6 +45,16 @@
   {% set lat, lon = item.get_lat_lon() %}
   <a href="#" class="show_on_map" id="map_{{ item.qid }}">show on map</a>
 
+  {% set identifiers = item.get_item_identifiers() %}
+  {% if identifiers %}
+    <p>
+    {% for values, label in identifiers.values() %}
+      {{ label }}: <strong>{{ ', '.join(values) }}</strong>
+      {%- if not loop.last %}; {% endif %}
+    {% endfor %}
+    </p>
+  {% endif %}
+
   {% set defunct_cats = item.defunct_cats() %}
   {% if defunct_cats %}
     <div class="alert alert-danger">
@@ -65,7 +75,11 @@
   {% for c in item.candidates %}
     {% set is_bad = (c.item_id, c.osm_type, c.osm_id) in bad_matches %}
     {% set show_tags = (c == picked) and not checked %}
-    {{ candidate_info(c, is_picked=(c == picked), is_bad=is_bad, show_tags=show_tags) }}
+    {{ candidate_info(c,
+                      is_picked=(c == picked),
+                      is_bad=is_bad,
+                      show_tags=show_tags,
+                      identifiers=identifiers) }}
   {% endfor %}
   </ul>
 </div>
