--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -11,7 +11,7 @@
 
 {% macro taginfo_link(tag) %}{% if '=' in tag %}<a href="https://taginfo.openstreetmap.org/tags/{{ tag }}">{{ tag }}</a>{% else %}<a href="https://taginfo.openstreetmap.org/keys/{{ tag }}" class="text-nowrap">{{ tag }}</a>{% endif -%}{%- endmacro -%}
 
-{% macro candidate_info(c, is_picked=false, is_bad=false, show_tags=false) %}
+{% macro candidate_info(c, is_picked=false, is_bad=false, show_tags=false, identifiers=false) %}
   {% set search_tags = c.item.tags %}
   {% set m = c.get_match() %}
     <li>{{c.osm_type}}:
@@ -53,6 +53,8 @@
         {% set tag = k + '=' + v %}
         {% if k in search_tags or tag in search_tags %}
             <b>{{ tag }}</b> (OSM tag matches Wikidata or Wikipedia category)
+        {% elif k in identifiers and v in identifiers[k][0] %}
+          <b>{{ tag }}</b> (OSM tag matches Wikidata identifier)
         {% else %}
             {{ tag }}
         {% endif %}<br />
