--- a/matcher/templates/user/account.html
+++ b/matcher/templates/user/account.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
- 
-{% block title %}{{ user.username }}:{% endblock %}
+
+{% block title %}Account{% endblock %}
 
 {% block content %}
 <div class="container my-2">
