--- a/matcher/templates/user/account.html
+++ b/matcher/templates/user/account.html
@@ -11,7 +11,7 @@
   {% set changeset_count = user.changesets.count() %}
 
   {% if changeset_count %}
-  <p>You have uploaded {{ '{:,d}'.format(changeset_countformat) }} changesets.</p>
+  <p>You have uploaded {{ '{:,d}'.format(changeset_count) }} changesets.</p>
   <h4>Changesets</h4>
   <table class="table table-hover">
   <thead>
