Bug fix latest change.

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -291,7 +291,7 @@ function zoom_to_item(e) {
   {% if place.area_in_sq_km < 1000 %}
     {% set larger_areas = place.suggest_larger_areas() | list %}
     {% if larger_areas %}
-      <p>{{ place.name }} is small ({{ p.area_in_sq_km }}), you might consider a larger enclosing area:</p>
+      <p>{{ place.name }} is small ({{ place.area_in_sq_km }}), you might consider a larger enclosing area:</p>
       <ul>
         {% for p in larger_areas %}
         <li><a href="{{ p.candidates_url() }}">{{ p.name }}</a>
