Improve larger area code.

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -291,11 +291,11 @@ function zoom_to_item(e) {
   {% if place.area_in_sq_km < 1000 %}
     {% set larger_areas = place.suggest_larger_areas() | list %}
     {% if larger_areas %}
-      <p>{{ place.name }} is small ({{ place.area_in_sq_km }}), you might consider a larger enclosing area:</p>
+      <p>{{ place.name }} is small ({{ place.area_in_sq_km }} km&sup2;), you might consider a larger enclosing area:</p>
       <ul>
         {% for p in larger_areas %}
         <li><a href="{{ p.candidates_url() }}">{{ p.name }}</a>
-          ({{ '{:,.1f}'.format(p.area_in_sq_km) }}) km&sup2;</li>
+          ({{ '{:,.1f}'.format(p.area_in_sq_km) }} km&sup2;)</li>
         {% endfor %}
       </ul>
     {% endif %}
