--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -36,7 +36,7 @@
   {% elif isa_list %}
     item type:
     {% for isa in isa_list %}
-      {{ isa.isa.label() }}{% if not loop.last %} / {% endif %}
+      {{ isa.label }}{% if not loop.last %} / {% endif %}
     {% endfor %}
   {% else %}
     search tags: {{ ', '.join(search_tags | sort) }}
